AJAX call working.

--- a/products-build/products-build/index.html
+++ b/products-build/products-build/index.html
@@ -334,6 +334,17 @@
                         </div><!-- end product-type -->
                     </div>
                 </div><!-- end moulding-selection -->
+                <div class="product-category">
+                    <h3 id="grout-picker" class="prodcat-picker">Select grout & mortar</h3>
+                    <div class="prodcat-options">
+                        <div class="product-type">
+                        </div><!-- end product-type -->
+                        <div class="product-type">
+                        </div><!-- end product-type -->
+                        <div class="product-type">
+                        </div><!-- end product-type -->
+                    </div>
+                </div><!-- products load test -->
             </div>
         </div><!-- end InternalFrame-->
     </div>
